2009-08-01 20:28-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* config.make.in: Change to include BUILD_SPEECH in output
	* configure: Regenerated
	* configure.ac: Check for flite library and flite.h header.
	* Tools/GNUmakefile: Add ${BUILD_SPEECH} to subproject list.
	* Tools/say/GNUmakefile
	* Tools/say/say.m: Say utility
	* Tools/speech/FliteSpeechEngine.m: 
	* Tools/speech/GNUmakefile
	* Tools/speech/GSSpeechEngine.[hm]
	* Tools/speech/GSSpeechServer.[hm]
	* Tools/speech/GSSpeechSynthesizer.[hm]: Speech synthesis engine
	implementation using flite.
	* Tools/speech/main.m: main for the server application.
	Speech code by David Chisnall <theraven@sucs.org>
	Changes to makefiles and config by Gregory Casamento.
	
2009-08-01 17:49-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Sounds/GNUmakefile: Change makefile to copy wav files.

2009-08-01 17:47-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Sounds/Basso.ogg: Deleted..
	* Sounds/Basso.wav: Added
	* Sounds/Blow.ogg: Deleted..
	* Sounds/Blow.wav: Added
	* Sounds/Bottle.ogg: Deleted
	* Sounds/Bottle.wav: Added
	* Sounds/Glass.ogg: Deleted
	* Sounds/Glass.wav: Added.
	Changed sounds to .wav instead of .ogg.

2009-08-01 12:22-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile
	* Sounds/Basso.ogg
	* Sounds/Blow.ogg
	* Sounds/Bottle.ogg
	* Sounds/Glass.ogg: Add new sounds.
	* Sounds/GNUmakefile
	* Sounds/GNUmakefile.postamble: Add sounds directory and makefiles.

2009-07-31  Adam Fedor  <fedor@gnu.org>

	* Version 0.17.1

2009-07-30 15:43-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSThemeTools.m: -[GSThemeTools drawRoundBezel:withColor:]
	add code to draw highlights for rounded buttons to give them a 
	better 3D look.

2009-07-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocument.m (-setFileName:): Set the file name to the
	absolute file path.
	Patch by Jonathan Gillaspie <jonathan.gillaspie@testplant.com>.
